# cmake-template

./: CMakeLists.txt  README.MD
source/: CMakeLists.txt
tests/: CMakeLists.txt
